Squash bugs and re-organize javascript

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;500&family=Source+Sans+Pro:wght@300;400;600&display=swap");
+
 $primary-color: #aa1e23;
 
 body {
@@ -10,9 +12,14 @@ body {
     justify-content: space-around;
     align-items: center;
 
-    width: 99.7%;
+    width: 50%;
     height: 100vh;
-    border: 2px solid $primary-color;
+    border: 4px solid $primary-color;
+
+    .selector {
+      display: flex;
+      flex-direction: row;
+    }
 
     .box {
       display: flex;
@@ -20,6 +27,21 @@ body {
       align-items: center;
       color: #fff;
       font-size: 2rem;
+      font-family: "Source Sans Pro";
+      font-weight: 600;
+      width: 100px;
+      height: 100px;
+      background-color: $primary-color;
+    }
+
+    .box2 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      font-size: 2rem;
+      font-family: "Source Sans Pro";
+      font-weight: 600;
       width: 100px;
       height: 100px;
       background-color: $primary-color;
